--- a/subgraph-reviews/package.json
+++ b/subgraph-reviews/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/subgraph": "^0.3.3",
     "apollo-server": "^3.4.0",
     "fs": "0.0.1-security",
     "graphql": "^15.6.1",
